--- a/selecaojava/src/main/resources/application.properties
+++ b/selecaojava/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.datasource.username=h2sa
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.batch_size=100
 
 #file upload
 spring.servlet.multipart.max-file-size=200MB
